--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,27 +1,44 @@
 name: Stack tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - "*" 
+  pull_request:
+    types: [synchronize, opened, reopened, edited]
+    branches:
+      - "*"
+  fork:
 
 jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: Set up GHC 9.6.6
-      uses: haskell-actions/setup@v2
-      with:
-        ghc-version: '9.6.6'
-        enable-stack: true
-        stack-version: 'latest'
-    - name: test
-      run: |
-        response=$(runhaskell Main.hs)
-        if [[ $response == "Done" ]]; then
-          echo "Output is Done"
-        else
-          echo "Output is:"
-          echo $response
-          exit 1
-        fi
-      shell: bash
 
+    - uses: haskell/actions/setup@v1.2
+      name: Setup Haskell Stack
+      with:
+        ghc-version: ${{ matrix.ghc }}
+        stack-version: ${{ matrix.stack }}
+
+    - uses: actions/cache@v2
+      name: Cache ~/.stack
+      with:
+        path: ~/.stack
+        key: ${{ runner.os }}-${{ matrix.ghc }}-stack
+
+    - name: Install dependencies
+      run: |
+        cd monads
+        stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --only-dependencies
+
+    - name: Build
+      run: |
+        cd monads 
+        stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks
+
+    - name: Test
+      run: |
+        cd monads
+        stack test --system-ghc
