--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,15 +30,15 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd monads
+        cd midterm
         stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --only-dependencies
 
     - name: Build
       run: |
-        cd monads 
+        cd midterm 
         stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks
 
     - name: Test
       run: |
-        cd monads
+        cd midterm
         stack test --system-ghc
