--- a/PBT/package.yaml
+++ b/PBT/package.yaml
@@ -1,6 +1,6 @@
-name:                midterm
+name:                PBT
 version:             0.1.0.0
-github:              "githubuser/midterm"
+github:              "githubuser/PBT"
 license:             BSD-3-Clause
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,13 +17,10 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/midterm#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/PBT#readme>
 
 dependencies:
 - base >= 4.7 && < 5
-- directory
-- containers
-- filepath
 
 ghc-options:
 - -Wall
@@ -40,7 +37,7 @@ library:
   source-dirs: src
 
 executables:
-  midterm-exe:
+  PBT-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -48,15 +45,21 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - midterm
+    - PBT
 
 tests:
-  midterm-test:
-    main:                Spec.hs
+  PBT-test:
+    main:                Test.hs
     source-dirs:         test
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - midterm
+    - PBT
+    - hedgehog
+    - tasty
+    - tasty-hedgehog
+    - tasty-quickcheck
+    - tasty-hspec
+    - tasty-hunit
