--- a/PBT/PBT.cabal
+++ b/PBT/PBT.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,8 +25,11 @@ source-repository head
 
 library
   exposed-modules:
-      List
-      Sort
+      Compiler
+      Eval
+      Expr
+      StackMachine
+      State
   other-modules:
       Paths_PBT
   autogen-modules:
@@ -36,6 +39,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , containers
   default-language: Haskell2010
 
 executable PBT-exe
@@ -50,15 +54,14 @@ executable PBT-exe
   build-depends:
       PBT
     , base >=4.7 && <5
+    , containers
   default-language: Haskell2010
 
 test-suite PBT-test
   type: exitcode-stdio-1.0
   main-is: Test.hs
   other-modules:
-      Test.List
-      Test.Sort
-      Test.Unit
+      Test.Props
       Paths_PBT
   autogen-modules:
       Paths_PBT
@@ -68,6 +71,7 @@ test-suite PBT-test
   build-depends:
       PBT
     , base >=4.7 && <5
+    , containers
     , hedgehog
     , tasty
     , tasty-hedgehog
