--- a/spellchecker.cabal
+++ b/spellchecker.cabal
@@ -83,9 +83,11 @@ test-suite spellchecker-test
       aeson
     , base >=4.7 && <5
     , bytestring
+    , hedgehog
     , optparse-applicative
     , spellchecker
     , tasty
+    , tasty-hedgehog
     , tasty-hunit
     , terminal-size
     , unordered-containers
